--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
         <div id="result"></div>
     </div>
 
-    <script src="dist/bundle.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
